fix: Checkout: removing too big space | change fake coupon form position | https://markupus.kaiten.io/space/32418/card/2772757

--- a/wp-content/themes/gfx/src/scss/page-templates/checkout.scss
+++ b/wp-content/themes/gfx/src/scss/page-templates/checkout.scss
@@ -274,7 +274,7 @@
 
         .woocommerce-form-coupon {
           width: 100%;
-          margin-bottom: 40px;
+          margin-top: 40px;
           max-width: 100%;
         }
       }
